GNUInstallDirs: Change special path defaults to absolute

Add policy `CMP0192` for compatibility.

Closes: #25852
Signed-off-by: Cristian Le <git@lecris.dev>