Source/cmPolicies.h
@@ -570,7 +570,11 @@ class cmMakefile;
   SELECT(POLICY, CMP0190,                                                     \
          "FindPython enforce consistency in cross-compiling mode.", 4, 1, 0,  \
          WARN)                                                                \
-  SELECT(POLICY, CMP0191, "The FindCABLE module is removed.", 4, 1, 0, WARN)
+  SELECT(POLICY, CMP0191, "The FindCABLE module is removed.", 4, 1, 0, WARN)  \
+  SELECT(POLICY, CMP0192,                                                     \
+         "GNUInstallDirs uses absolute SYSCONFDIR, LOCALSTATEDIR, and "       \
+         "RUNSTATEDIR in special prefixes.",                                  \
+         4, 1, 0, WARN)
 
 #define CM_SELECT_ID(F, A1, A2, A3, A4, A5, A6) F(A1)
 #define CM_FOR_EACH_POLICY_ID(POLICY)                                         \
