Modules/GNUInstallDirs.cmake
@@ -23,6 +23,7 @@ Inclusion of this module defines the following variables:
   the ``DESTINATION`` options of  :command:`install` commands for the
   corresponding file type.  It should be a path relative to the installation
   prefix so that it can be converted to an absolute path in a relocatable way.
+  However, there are some `special cases`_ as documented below.
 
   While absolute paths are allowed, they are not recommended as they
   do not work with the ``cmake --install`` command's
@@ -36,8 +37,8 @@ Inclusion of this module defines the following variables:
   The absolute path generated from the corresponding ``CMAKE_INSTALL_<dir>``
   value.  If the value is not already an absolute path, an absolute path
   is constructed typically by prepending the value of the
-  :variable:`CMAKE_INSTALL_PREFIX` variable.  However, there are some
-  `special cases`_ as documented below.
+  :variable:`CMAKE_INSTALL_PREFIX` variable, except in `special cases`_
+  as documented below.
 
   These variables shouldn't be used in :command:`install` commands
   as they do not work with the ``cmake --install`` command's
@@ -54,13 +55,29 @@ where ``<dir>`` is one of:
   program executables (``libexec``)
 ``SYSCONFDIR``
   read-only single-machine data (``etc``)
+
+  .. versionchanged:: 4.1
+    If the :variable:`CMAKE_INSTALL_PREFIX` falls into the
+    `special cases`_,  the default paths for are the absolute
+    path variants as described there. See policy :policy:`CMP0192`.
 ``SHAREDSTATEDIR``
   modifiable architecture-independent data (``com``)
 ``LOCALSTATEDIR``
   modifiable single-machine data (``var``)
+
+  .. versionchanged:: 4.1
+    If the :variable:`CMAKE_INSTALL_PREFIX` falls into the
+    `special cases`_,  the default paths for are the absolute
+    path variants as described there. See policy :policy:`CMP0192`.
 ``RUNSTATEDIR``
+  run-time variable data (``LOCALSTATEDIR/run``)
+
   .. versionadded:: 3.9
-    run-time variable data (``LOCALSTATEDIR/run``)
+
+  .. versionchanged:: 4.1
+    If the :variable:`CMAKE_INSTALL_PREFIX` falls into the
+    `special cases`_,  the default paths for are the absolute
+    path variants as described there. See policy :policy:`CMP0192`.
 ``LIBDIR``
   object code libraries (``lib`` or ``lib64``)
 
@@ -86,6 +103,14 @@ where ``<dir>`` is one of:
 If the includer does not define a value the above-shown default will be
 used and the value will appear in the cache for editing by the user.
 
+If a default value for the ``CMAKE_INSTALL_<dir>`` is used and the
+:variable:`CMAKE_INSTALL_PREFIX` is changed, the new default value will
+be used calculated on the new :variable:`CMAKE_INSTALL_PREFIX` value.
+Using :option:`--prefix <cmake--install --prefix>` in ``cmake --install``
+will not alter these values.
+
+.. _`GNUInstallDirs special cases`:
+
 Special Cases
 ^^^^^^^^^^^^^
 
@@ -109,20 +134,32 @@ The following values of :variable:`CMAKE_INSTALL_PREFIX` are special:
   For ``<dir>`` equal to ``SYSCONFDIR``, ``LOCALSTATEDIR`` or
   ``RUNSTATEDIR``, the ``CMAKE_INSTALL_FULL_<dir>`` is computed by
   prepending just ``/`` to the value of ``CMAKE_INSTALL_<dir>``
-  if it is not user-specified as an absolute path.
+  if it is not already an absolute path.
   For example, the ``SYSCONFDIR`` value ``etc`` becomes ``/etc``.
   This is required by the `GNU Coding Standards`_.
+
+  .. versionchanged:: 4.1
+    The default values of ``CMAKE_INSTALL_<dir>`` for ``<dir>`` equal
+    to ``SYSCONFDIR``, ``LOCALSTATEDIR`` and ``RUNSTATEDIR`` are the
+    absolute paths ``/etc``, ``/var`` and ``/var/run`` respectively.
+    See policy :policy:`CMP0192`.
 
 ``/opt/...``
 
   For ``<dir>`` equal to ``SYSCONFDIR``, ``LOCALSTATEDIR`` or
   ``RUNSTATEDIR``, the ``CMAKE_INSTALL_FULL_<dir>`` is computed by
   *appending* the prefix to the value of ``CMAKE_INSTALL_<dir>``
-  if it is not user-specified as an absolute path.
+  if it is not already an absolute path.
   For example, the ``SYSCONFDIR`` value ``etc`` becomes ``/etc/opt/...``.
   This is defined by the `Filesystem Hierarchy Standard`_.
 
   This behavior does not apply to paths under ``/opt/homebrew/...``.
+
+  .. versionchanged:: 4.1
+    The default values of ``CMAKE_INSTALL_<dir>`` for ``<dir>`` equal
+    to ``SYSCONFDIR``, ``LOCALSTATEDIR`` and ``RUNSTATEDIR`` are the
+    absolute paths ``/etc/opt/...``, ``/var/opt/...`` and
+    ``/var/run/opt/...`` respectively. See policy :policy:`CMP0192`.
 
 .. _`Filesystem Hierarchy Standard`: https://refspecs.linuxfoundation.org/FHS_3.0/fhs/index.html
 
@@ -152,6 +189,11 @@ Macros
 #]=======================================================================]
 
 cmake_policy(SET CMP0140 NEW)
+
+# Note that even though we read the policy every time this file is `include`
+# only the first occurrence has effect because it is used for the initialization
+# of cache variables
+cmake_policy(GET CMP0192 _GNUInstallDirs_CMP0192)
 
 # Convert a cache variable to PATH type
 
@@ -339,6 +381,38 @@ function(_GNUInstallDirs_LIBDIR_get_default out_var install_prefix)
   return(PROPAGATE ${out_var})
 endfunction()
 
+function(_GNUInstallDirs_SYSCONFDIR_get_default out_var install_prefix)
+  if(_GNUInstallDirs_CMP0192 STREQUAL "NEW")
+    _GNUInstallDirs_special_absolute(${out_var}
+      "${_GNUInstallDirs_SYSCONFDIR_DEFAULT}" "${install_prefix}")
+  endif()
+  cmake_path(NORMAL_PATH ${out_var})
+  return(PROPAGATE ${out_var})
+endfunction()
+function(_GNUInstallDirs_LOCALSTATEDIR_get_default out_var install_prefix)
+  if(_GNUInstallDirs_CMP0192 STREQUAL "NEW")
+    _GNUInstallDirs_special_absolute(${out_var}
+      "${_GNUInstallDirs_LOCALSTATEDIR_DEFAULT}" "${install_prefix}")
+  endif()
+  cmake_path(NORMAL_PATH ${out_var})
+  return(PROPAGATE ${out_var})
+endfunction()
+
+# Depends on current CMAKE_INSTALL_LOCALSTATEDIR value
+function(_GNUInstallDirs_RUNSTATEDIR_get_default out_var install_prefix)
+  set(${out_var} "${_GNUInstallDirs_RUNSTATEDIR_DEFAULT}")
+  if(_GNUInstallDirs_CMP0192 STREQUAL "NEW")
+    # In the /opt/ case we want the install_prefix to be appended as
+    # LOCALSTATEDIR/run/PREFIX
+    if(install_prefix MATCHES "^/opt/" AND NOT install_prefix MATCHES "^/opt/homebrew/")
+        string(REPLACE "${install_prefix}" "/run${install_prefix}"
+          ${out_var} "${CMAKE_INSTALL_LOCALSTATEDIR}"
+        )
+    endif()
+  endif()
+  return(PROPAGATE ${out_var})
+endfunction()
+
 _GNUInstallDirs_cache_path(BINDIR
   "User executables")
 _GNUInstallDirs_cache_path(SBINDIR
@@ -514,3 +588,5 @@ foreach(dir
     )
   GNUInstallDirs_get_absolute_install_dir(CMAKE_INSTALL_FULL_${dir} CMAKE_INSTALL_${dir} ${dir})
 endforeach()
+
+unset(_GNUInstallDirs_CMP0192)
